audiocdsrc: Don't consider trailing data tracks for MusicBrainz disc id calculation

MusicBrainz removes trailing data tracks from releases on the server
and also for the calculation of the MusicBrainz Disc ID.

https://bugzilla.gnome.org/show_bug.cgi?id=708991